Add new events for march

--- a/events.html
+++ b/events.html
@@ -115,7 +115,166 @@
                     <button class="filter-button tag-math" data-tag="Math">Math</button>
                 </div>
 
+                <div class="row flex-items-lg-middle flex-items-lg-center">
+                    <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="card d-flex flex-row align-items-center">
+                            <div class="card-block">
+                                <!-- Card Content -->
+                                <h4 class="card-title">March 14, 2025</h4>
+                                <div class="card-header">
+                                    <h3>STEM Students For a Day!</h3>
+                                </div>
+                                <p>
+                                    The WISE University Experience is a one-day event for high school students curious about STEM and university life. Held on March 14th, 2025, at the University of Toronto, it offers a chance to attend lectures, tour research labs, and hear from inspiring STEM leaders.
 
+                                    Guided by university students, participants will gain insight into post-secondary education, connect with mentors, and explore future opportunities. This inclusive, free event is open to all genders and designed for students eager to take their first step into science and engineering.
+                                </p>
+                                <!-- Button -->
+                                <a href="https://lu.ma/waje8bw3" target="_blank" class="btn-current"
+                                    data-date="2025-03-14">Register Here!</a>
+                                <!-- Tags -->
+                                <div class="tags">
+                                    <span class="tag-highschool">Highschool</span>
+                                    <span class="tag-science">Science</span>
+                                    <span class="tag-tech">Tech</span>
+                                    <span class="tag-engineering">Engineering</span>
+                                    <span class="tag-math">Math</span>
+                                </div>
+                            </div>
+                            <!-- Image  -->
+                            <div class="image-container">
+                                <img src="img/events/Stem_Students_For_A_Day.avif" class="img-fluid" alt="comm-outreach">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row flex-items-lg-middle flex-items-lg-center">
+                    <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="card d-flex flex-row align-items-center">
+                            <div class="card-block">
+                                <!-- Card Content -->
+                                <h4 class="card-title">March 13, 2025</h4>
+                                <div class="card-header">
+                                    <h3>A Stellar Movie Night: hosted by WISE, ASX, RSX, UTAT, and START</h3>
+                                </div>
+                                <p>
+                                    Get ready for a night that's out of this world! Join us for "A Stellar Movie Night," hosted by the amazing teams at WISE, ASX, RSX, UTAT, and START. Stay tuned for more details, and don't miss out on this stellar event!
+                                </p>
+                                <!-- Button -->
+                                <a href="https://lu.ma/1ngtuste" target="_blank" class="btn-current"
+                                    data-date="2025-03-13">Register Here!</a>
+                                <!-- Tags -->
+                                <div class="tags">
+                                    <span class="tag-university">University</span>
+                                    <span class="tag-science">Science</span>
+                                    <span class="tag-tech">Tech</span>
+                                    <span class="tag-engineering">Engineering</span>
+                                    <span class="tag-math">Math</span>
+                                </div>
+                            </div>
+                            <!-- Image  -->
+                            <div class="image-container">
+                                <img src="img/events/Stellar_Movie_Night.avif" class="img-fluid" alt="comm-outreach">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row flex-items-lg-middle flex-items-lg-center">
+                    <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="card d-flex flex-row align-items-center">
+                            <div class="card-block">
+                                <!-- Card Content -->
+                                <h4 class="card-title">March 6, 2025</h4>
+                                <div class="card-header">
+                                    <h3>Winter Wise & Cheese</h3>
+                                </div>
+                                <p>
+                                    ​​WISE and Cheese is our biannual networking session with our sponsor companies. Students will get the opportunity to participate in round table discussions with company representatives to inquire about career opportunities, industry life, and more!
+                                </p>
+                                <!-- Button -->
+                                <a href="https://lu.ma/c83bftwp" target="_blank" class="btn-current"
+                                    data-date="2025-03-07">Register Here!</a>
+                                <!-- Tags -->
+                                <div class="tags">
+                                    <span class="tag-university">University</span>
+                                    <span class="tag-science">Science</span>
+                                    <span class="tag-tech">Tech</span>
+                                    <span class="tag-engineering">Engineering</span>
+                                </div>
+                            </div>
+                            <!-- Image  -->
+                            <div class="image-container">
+                                <img src="img/events/W_Wise_N_Cheese.avif" class="img-fluid" alt="comm-outreach">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row flex-items-lg-middle flex-items-lg-center">
+                    <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="card d-flex flex-row align-items-center">
+                            <div class="card-block">
+                                <!-- Card Content -->
+                                <h4 class="card-title">February 25, 2025</h4>
+                                <div class="card-header">
+                                    <h3>Build Your Professional Presence with AMD</h3>
+                                </div>
+                                <p>
+                                    The AMD Workshop is an engaging event for students interested in building their professional presence and standing out in tech. It features a workshop led by Paula Pulanco and Catarina Alves, focusing on networking and career development.
+
+                                    Students will also hear from Ingrid Wu and Nikita Andrade in Intern Diaries: What’s It Like as an AMD Intern, where they’ll share insights from their journeys. The event wraps up with an open Q&A, offering a chance to connect with industry professionals.
+                                </p>
+                                <!-- Button -->
+                                <a href="https://lu.ma/hxkxwf5h" target="_blank" class="btn-current"
+                                    data-date="2025-03-03">Join Waitlist Here!</a>
+                                <!-- Tags -->
+                                <div class="tags">
+                                    <span class="tag-university">University</span>
+                                    <span class="tag-science">Science</span>
+                                    <span class="tag-tech">Tech</span>
+                                    <span class="tag-engineering">Engineering</span>
+                                </div>
+                            </div>
+                            <!-- Image  -->
+                            <div class="image-container">
+                                <img src="img/events/Build_Presence_AMD.avif" class="img-fluid" alt="comm-outreach">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                
+                <div class="row flex-items-lg-middle flex-items-lg-center">
+                    <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="card d-flex flex-row align-items-center">
+                            <div class="card-block">
+                                <!-- Card Content -->
+                                <h4 class="card-title">February 9, 2025</h4>
+                                <div class="card-header">
+                                    <h3>Go Code Girl</h3>
+                                </div>
+                                <p>
+                                    Go Code Girl is a free annual event offering female (cis/trans), non-binary, and two-spirited students in Grades 7 to 10 the opportunity to explore the dynamic world of coding! Students will participate in hands-on activities and workshops to gain insight into computer fundamentals and coding concepts while learning how this exciting field shapes our world. Students are not expected to have any prior knowledge of coding- Go Code Girl is open to students with all levels of coding experience.
+                                </p>
+                                <!-- Button -->
+                                <a href="https://lu.ma/ycgsz5m5" target="_blank" class="btn-current"
+                                    data-date="2025-02-08">Register Here!</a>
+                                <!-- Tags -->
+                                <div class="tags">
+                                    <span class="tag-highschool">Highschool</span>
+                                    <span class="tag-tech">Tech</span>
+                                </div>
+                            </div>
+                            <!-- Image  -->
+                            <div class="image-container">
+                                <img src="img/events/Go-Code_Girl.avif" class="img-fluid" alt="comm-outreach">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
 
                 <div class="row flex-items-lg-middle flex-items-lg-center">
                     <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
