--- a/our-team.html
+++ b/our-team.html
@@ -1051,7 +1051,7 @@
                             <div class="member-info-content">
                                 <h4>Clara Han</h4>
                                 <span>Industry Mentorship Director</span>
-                                <h5>Life Sciences</h5>
+                                <!-- <h5>Life Sciences</h5> -->
                                 <!-- <div class="social">
                                     <a href="mailto:industry.mentorship@wise.skule.ca"><i
                                             class="fa fa-envelope"></i></a>
