Completed all tasks for issue #57

--- a/conference.html
+++ b/conference.html
@@ -48,6 +48,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!--Font Awesome kit for adding tiktok logo-->
+    <script src="https://kit.fontawesome.com/63e102f3ac.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -227,8 +230,8 @@
                                     class="fa fa-facebook"></i></a>
                             <a href="https://www.instagram.com/wiseuoft/" target="_blank" class="instagram"><i
                                     class="fa fa-instagram"></i></a>
-                            <a href="https://twitter.com/WISEUofT" target="_blank" class="twitter"><i
-                                    class="fa fa-twitter"></i></a>
+                            <a href="https://www.tiktok.com/@wiseuoft/" target="_blank" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
+
                             <a href="https://www.linkedin.com/company/women-in-science-and-engineering-university-of-toronto-chapter/"
                                 target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
                             <a href="https://forms.gle/Rs7u2LsBviyaWunc6f" target="_blank" class="newspaper"><i
