--- a/events.html
+++ b/events.html
@@ -41,6 +41,8 @@
 
         gtag('config', 'UA-122092113-1');
     </script>
+    <!--Font Awesome kit for adding tiktok logo-->
+    <script src="https://kit.fontawesome.com/63e102f3ac.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -113,6 +115,39 @@
                     <button class="filter-button tag-tech" data-tag="Tech">Tech</button>
                     <button class="filter-button tag-engineering" data-tag="Engineering">Engineering</button>
                     <button class="filter-button tag-math" data-tag="Math">Math</button>
+                </div>
+
+                <div class="row flex-items-lg-middle flex-items-lg-center">
+                    <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="card d-flex flex-row align-items-center">
+                            <div class="card-block">
+                                <!-- Card Content -->
+                                <h4 class="card-title">September 3rd, 2025</h4>
+                                <div class="card-header">
+                                    <h3>First Year Mixer</h3>
+                                </div>
+                                <p>
+                                    Calling all first-years! Join the Women in Science & Engineering (WISE) club for our annual First Year Mixer. 
+                                    This evening is an opportunity to meet new friends, connect with upper years, and learn all about the exciting opportunities that WISE has to offer. 
+                                    Whether you are looking to grow your network, get involved in events, or just hang out with other like minded women, this is the perfect opportunity to do so!
+                                </p>
+                                <!-- Button -->
+                                <a href="https://luma.com/08ijs0sa" target="_blank" class="btn-current"
+                                    data-date="2025-09-3">Register Here!</a>
+                                <!-- Tags -->
+                                <div class="tags">
+                                    <span class="tag-highschool">University</span>
+                                    <span class="tag-science">Science</span>
+                                    <span class="tag-tech">Tech</span>
+                                    <span class="tag-engineering">Engineering</span>
+                                </div>
+                            </div>
+                            <!-- Image  -->
+                            <div class="image-container">
+                                <img src="img/events/FY-social.jpg" class="img-fluid" alt="comm-outreach">
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="row flex-items-lg-middle flex-items-lg-center">
@@ -550,8 +585,7 @@
                                     class="fa fa-facebook"></i></a>
                             <a href="https://www.instagram.com/wiseuoft/" target="_blank" class="instagram"><i
                                     class="fa fa-instagram"></i></a>
-                            <a href="https://twitter.com/WISEUofT" target="_blank" class="twitter"><i
-                                    class="fa fa-twitter"></i></a>
+                            <a href="https://www.tiktok.com/@wiseuoft/" target="_blank" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
                             <a href="https://www.linkedin.com/company/women-in-science-and-engineering-university-of-toronto-chapter/"
                                 target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
                             <a href="https://forms.gle/Rs7u2LsBviyaWunc6" target="_blank" class="newspaper"><i
