--- a/industry-mentorship.html
+++ b/industry-mentorship.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>WISE | Industry Mentorship</title>
+    <title>WISE | Professional Mentorship Program</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <meta name="author" content="WISE UofT Chapter">
@@ -38,6 +38,8 @@
 
         gtag('config', 'UA-122092113-1');
     </script>
+    <!--Font Awesome kit for adding tiktok logo-->
+    <script src="https://kit.fontawesome.com/63e102f3ac.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -67,7 +69,7 @@
                         <ul>
                             <li><a href="community-outreach.html">Community Outreach</a></li>
                             <li><a href="hs-outreach.html">High School Outreach</a></li>
-                            <li><a href="industry-mentorship.html">Industry Mentorship</a></li>
+                            <li><a href="industry-mentorship.html">Professional Mentorship Program</a></li>
                             <li><a href="pd.html">Professional Development</a></li>
                         </ul>
                     </li>
@@ -96,15 +98,14 @@
                     <p> Please check back soon for more infomation on the 2024-2025 academic year! </p>
                 </div>
                 <div class="section-header">
-                    <h3>Industry Mentorship</h3>
+                    <div class=" wow fadeInUp">
+                        <img src="img/initiatives/pmp_banner_v1.png" class="img-fluid pb-4" alt="">
+                    </div>
                 </div>
                 <div class="row feature-item">
-                    <div class="col-lg-5 wow fadeInUp">
-                        <img src="img/initiatives/ind-mentorship.jpg" class="img-fluid" alt="">
-                    </div>
-                    <div class="col-lg-7 wow fadeInUp pt-5 pt-lg-0">
+                    <div class="col-12 wow fadeInUp pt-5 pt-lg-0">
                         <h4>Overview</h4>
-                        <p>The Industry Mentorship Program pairs female undergraduate students in science and engineering with committed 
+                        <p>The Professional Mentorship Program pairs female undergraduate students in science and engineering with committed 
                             and passionate mentors who are knowledgeable and experienced in their field.</p>
                         <p>​The goal of the program is to provide a mentorship experience tailored to undergraduate women in STEM. For this 
                             reason, our mentors are a group of men and women who believe women play a key role in advancing the STEM industry 
@@ -141,8 +142,8 @@
                     <h4>Main Contact</h4>
                 </div>
                 <section id="team">
-                    <div class="row justify-content-md-center">
-                        <p>vp.pd@wise.skule.ca</p>
+                    <div class="row justify-content-md-center ">
+                        <p class="px-3">mentorship@wise.skule.ca</p>
                         <!-- <div class="col-lg-3 col-md-5 wow fadeInUp">
                             
                             <div class="member">
@@ -208,7 +209,7 @@
                         <div class="social-links">
                             <a href="https://www.facebook.com/WISE.UofT.Chapter/" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.instagram.com/wiseuoft/" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a>
-                            <a href="https://twitter.com/WISEUofT" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
+                            <a href="https://www.tiktok.com/@wiseuoft/" target="_blank" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
                             <a href="https://www.linkedin.com/company/women-in-science-and-engineering-university-of-toronto-chapter/" 
                                 target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
                             <a href="https://forms.gle/Rs7u2LsBviyaWunc6"
