--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <ul>
                             <li><a href="community-outreach.html">Community Outreach</a></li>
                             <li><a href="hs-outreach.html">High School Outreach</a></li>
-                            <li><a href="industry-mentorship.html">Industry Mentorship</a></li>
+                            <li><a href="industry-mentorship.html">Professional Mentorship Program</a></li>
                             <li><a href="pd.html">Professional Development</a></li>
                         </ul>
                     </li>
