Changed the general member form to the new one

--- a/industry-mentorship.html
+++ b/industry-mentorship.html
@@ -212,7 +212,7 @@
                             <a href="https://www.tiktok.com/@wiseuoft/" target="_blank" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
                             <a href="https://www.linkedin.com/company/women-in-science-and-engineering-university-of-toronto-chapter/" 
                                 target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                            <a href="https://forms.gle/Rs7u2LsBviyaWunc6"
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdJA9F8pmHuZyD93JAdwF4eilJZ8Ib-yN9EYk7E9FoDfRSJgw/viewform?usp=header"
                                 target="_blank" class="newspaper"><i class="fa fa-newspaper-o"></i></a>
                         </div>
                     </div>
