Second commit for adding new events

--- a/events.html
+++ b/events.html
@@ -122,6 +122,78 @@
                         <div class="card d-flex flex-row align-items-center">
                             <div class="card-block">
                                 <!-- Card Content -->
+                                <h4 class="card-title">October 3rd, 2025</h4>
+                                <div class="card-header">
+                                    <h3>High School Mentor</h3>
+                                </div>
+                                <p>
+                                    If you’ve ever wanted to try mentorship, now is the time! 
+
+                                    WISE is offering undergrad and grad students like you the opportunity to develop your leadership and mentorship skills! Through the WISE High School Mentorship Program, mentors will be able to engage with high school students in the GTA and encourage them to pursue STEM-based fields. 
+
+                                    ✨Make positive impact on the lives of students
+                                    👭Become a part of our supportive and innovative team of individuals 
+                                    🌐Make lasting connections
+                                </p>
+                                <!-- Button -->
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLScny7W7PuWLizVqW-UnDE2AJhpE_wwZBggO-GsWa5ZK2l9tag/viewform" target="_blank" class="btn-current"
+                                    data-date="2025-10-3">Register Here!</a>
+                                <!-- Tags -->
+                                <div class="tags">
+                                    <span class="tag-highschool">University</span>
+                                    <span class="tag-highschool">High School</span>
+                                    <span class="tag-science">Science</span>
+                                    <span class="tag-tech">Tech</span>
+                                    <span class="tag-engineering">Engineering</span>
+                                </div>
+                            </div>
+                            <!-- Image  -->
+                            <div class="image-container">
+                                <img src="img/events/mentor1.png" class="img-fluid" alt="comm-outreach">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row flex-items-lg-middle flex-items-lg-center">
+                    <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="card d-flex flex-row align-items-center">
+                            <div class="card-block">
+                                <!-- Card Content -->
+                                <h4 class="card-title">October 7th, 2025</h4>
+                                <div class="card-header">
+                                    <h3>NVIDIA event</h3>
+                                </div>
+                                <p>
+                                   Calling all women in tech: NVIDIA is hosting a panel session on Oct 7 (Tue) 6-8 pm at Myhal 5th Floor Atrium focused on 
+                                   succeeding as women in the face-paced, ever-growing technology industry. NVIDIA is also looking to recruit PEY Co-op students 
+                                   and new grads from the event. If you’re interested in learning about the career journey of 3 inspiring women in a shared intimate 
+                                   space, as well as whether you are a good fit for NVIDIA’s forward-driven workplace, sign up for the WISE NVIDIA Panel x Networking 
+                                   event before spots run out!
+
+                                </p>
+                                <!-- Button -->
+                                <a href="https://nvidia.eightfold.ai/events/candidate/landing?plannedEventId=86qX4qwM0" target="_blank" class="btn-current"
+                                    data-date="2025-10-7">Register Here!</a>
+                                <!-- Tags -->
+                                <div class="tags">
+                                    <span class="tag-highschool">University</span>
+                                    <span class="tag-science">Science</span>
+                                    <span class="tag-tech">Tech</span>
+                                    <span class="tag-engineering">Engineering</span>
+                                </div>
+                            </div>
+                            <!-- Image  -->
+                            <div class="image-container">
+                                <img src="img/events/NIVIDIA_Correct.png" class="img-fluid" alt="comm-outreach">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row flex-items-lg-middle flex-items-lg-center">
+                    <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="card d-flex flex-row align-items-center">
+                            <div class="card-block">
+                                <!-- Card Content -->
                                 <h4 class="card-title">September 3rd, 2025</h4>
                                 <div class="card-header">
                                     <h3>First Year Mixer</h3>
