--- a/events.html
+++ b/events.html
@@ -122,6 +122,45 @@
                         <div class="card d-flex flex-row align-items-center">
                             <div class="card-block">
                                 <!-- Card Content -->
+                                <h4 class="card-title">November 5th 2025</h4>
+                                <div class="card-header">
+                                    <h3>Spilling the Tea on Research</h3>
+                                </div>
+                                <p>
+                                    Join us on November 5th, 2025 (5:30–8:00 PM, GB202) for an evening of candid conversations about the realities of research in STEM!
+
+                                    This event is perfect for undergraduate students curious about research—whether in engineering, computer science, health sciences, or beyond. You’ll hear from both professors 
+                                    and graduate students through engaging panels that share challenges, accomplishments, and career journeys in research.
+
+                                    After the panels, stay for our networking session, where you can connect informally with panelists, ask questions, and explore potential research opportunities.
+
+                                    Light snacks and beverages will be provided. Don’t miss this chance to gain insider insights and make meaningful connections!
+
+                                </p>
+                                <!-- Button -->
+                                <a href="https://luma.com/wzjjmne2" target="_blank" class="btn-current"
+                                    data-date="2025-11-5">Register Here!</a>
+                                <!-- Tags -->
+                                <div class="tags">
+                                    <span class="tag-highschool">University</span>
+                                    <span class="tag-science">Science</span>
+                                    <span class="tag-tech">Tech</span>
+                                    <span class="tag-engineering">Engineering</span>
+                                </div>
+                            </div>
+                            <!-- Image  -->
+                            <div class="image-container">
+                                <img src="img/events/STR.png" class="img-fluid" alt="comm-outreach">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row flex-items-lg-middle flex-items-lg-center">
+                    <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="card d-flex flex-row align-items-center">
+                            <div class="card-block">
+                                <!-- Card Content -->
                                 <h4 class="card-title">October 3rd, 2025</h4>
                                 <div class="card-header">
                                     <h3>High School Mentor</h3>
@@ -154,6 +193,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="row flex-items-lg-middle flex-items-lg-center">
                     <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
                         <div class="card d-flex flex-row align-items-center">
