fixes to team page

--- a/our-team.html
+++ b/our-team.html
@@ -305,7 +305,7 @@
                             <!--<img src="img/team-2021/Armita Doost 1.jpg" class="img-fluid"
                             onmouseover="this.src='img/team-2022/Armita Doost 2.jpg';"
                             onmouseout="this.src='img/team-2021/Armita Doost 1.jpg';">-->
-                            <img src="" class="img-fluid">
+                            <img src="img/team-2025/" class="img-fluid">
                             <div class="member-info">
                                 <div class="member-info-content-long">
                                     <h4>Vivian Chiang</h4>
@@ -601,25 +601,25 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-4 col-sm-6">
+                <!-- <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="member" data-toggle="modal" data-target="#danieller">
-                        <!--<img src="img/team-2022/Yousef Al 1.jpg" class="img-fluid"
+                        <img src="img/team-2022/Yousef Al 1.jpg" class="img-fluid"
                         onmouseover="this.src='img/team-2022/Yousef Al 2.jpg';"
-                        onmouseout="this.src='img/team-2022/Yousef Al 1.jpg';">-->
+                        onmouseout="this.src='img/team-2022/Yousef Al 1.jpg';">
                         <img src="img/no-image.png" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Danielle Rabiner</h4>
                                 <span>Director of Finance</span>
-                                <!-- <h5>Human Biology, Physiology, Immunology</h5>
+                                 <h5>Human Biology, Physiology, Immunology</h5>
                                 <div class="social">
                                     <a href="https://www.linkedin.com/in/nadia-emami-4163092a7" target="_blank"><i
                                             class="fa fa-linkedin"></i></a>
-                                </div> -->
+                                </div> 
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="member" data-toggle="modal" data-target="#sophiak">
@@ -849,7 +849,7 @@
                             <!--<img src="img/team-2021/1 - Maggie Wang.jpg" class="img-fluid"
                         onmouseover="this.src='img/team-2021/2 - Maggie Wang.jpg';"
                         onmouseout="this.src='img/team-2021/1 - Maggie Wang.jpg';">-->
-                            <img src="img/no-image.png" class = "img-fluid">
+                            <img src="img/team-2025/Doga Baskan.jpg" class = "img-fluid">
                             <div class="member-info">
                                 <div class="member-info-content">
                                     <h4>Doga Baskan</h4>
@@ -1260,7 +1260,7 @@
                             <!--<img src="img/team-2022/Lina Jin 1.png" class="img-fluid"
                         onmouseover="this.src='img/team-2022/Lina Jin 2.jpg';"
                         onmouseout="this.src='img/team-2022/Lina Jin 1.png';">-->
-                            <img src="img/team-2025/HyeonjiJung.jpg class="img-fluid">
+                            <img src="img/team-2025/HyeonjiJung.jpg" class="img-fluid">
                             <div class="member-info">
                                 <div class="member-info-content-long">
                                     <h4>Hyeonji Jung</h4>
@@ -2111,7 +2111,7 @@
         </div>
     </div>
 
-    <div class="modal fade" id="danieller" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <!--<div class="modal fade" id="danieller" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
 
             <div class="modal-content">
@@ -2135,7 +2135,7 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="modal fade" id="sophiak" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
@@ -3206,7 +3206,7 @@
     </div>
 
 
-    <div class="modal fade" id="lucniannap" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="luciannap" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
 
             <div class="modal-content">
@@ -3221,7 +3221,7 @@
                     <a href="mailto:internal.outreach@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                     <a href="http://www.linkedin.com/in/lucianna-paventi-b25a09311" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <p>Hi! I am Lucianna, a 2nd year student in Mineral Engineering
-                        <br>
+                        <br></br>
                         <em>Favourite hobby: My favourite hobbies include reading and listening to music. Reading is one of my favourite things to do with my free time and I’m never not listening to music! </em>
                     </p>
                     <div class="text-center">
@@ -3956,7 +3956,7 @@
                         Hi, my name is Diba and I am studying Engineering Science (Machine Intelligence, Robotics Minor) currently in my
                         PEY. 
                         <br></br>
-                        <em>Fun fact: A fun fact about you: I've travelled to over 40 countries!</em>
+                        <em>A fun fact about you: I've travelled to over 40 countries!</em>
                     </p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
